--- a/src/main/resources/templates/common/navbar.peb.html
+++ b/src/main/resources/templates/common/navbar.peb.html
@@ -6,7 +6,7 @@
 
                 <!-- 1. LOGO -->
                 <a class="text-decoration-none d-flex align-items-center text-white me-1" href="#">
-                    <img src="./Dawazon.png"
+                    <img src="/Dawazon.png"
                         class="bg-white text-dark rounded-circle d-flex justify-content-center align-items-center me-2"
                         style="width: 35px; height: 35px; font-weight: bold;">
                     <!-- Ocultamos el texto 'Dawazon' solo en pantallas muy muy pequeñas (<576px) para dar espacio al buscador -->
