--- a/src/main/resources/templates/web/auth/auth.peb.html
+++ b/src/main/resources/templates/web/auth/auth.peb.html
@@ -31,7 +31,7 @@
 <header>
     <div class="container-fluid">
         <a class="logo-container" href="/">
-            <img src="Dawazon.png"
+            <img src="/Dawazon.png"
                  class="bg-white text-dark rounded-circle d-flex justify-content-center align-items-center me-2"
                  style="width: 40px; height: 40px; object-fit: contain; padding:  2px;">
             <span class="fw-bold fs-3" style="color: #ff9900;">Dawazon</span>
