--- a/src/main/resources/templates/common/navbar.peb.html
+++ b/src/main/resources/templates/common/navbar.peb.html
@@ -15,7 +15,7 @@
                 <form class="d-flex flex-grow-1" action="/" method="get" role="search">
                     <div class="input-group">
                         <input class="form-control search-input" name="name" type="search" placeholder="Buscar..."
-                            aria-label="Search" value="{{username | default('')}}">
+                            aria-label="Search" value="">
                         <button class="btn btn-search" type="submit">
                             <i class="bi bi-search"></i>
                         </button>
@@ -28,9 +28,7 @@
                     <a href="/auth/me/cart" class="text-white position-relative d-none d-md-block">
                         <i class="bi bi-cart3 fs-4"></i>
                         {% if cartItemCount > 0 %}
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-            {{cartItemCount}}
-        </span>
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">{{cartItemCount}}</span>
                         {% endif %}
                     </a>
                     {% endif %}
@@ -38,7 +36,7 @@
                     <div class="dropdown">
                         <a href="#" class="d-flex align-items-center text-white text-decoration-none"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="img/defaultImg.png" alt="user" class="rounded-circle profile-img">
+                            <img src="/defaultImg.png" alt="user" class="rounded-circle profile-img">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end shadow">
                             <li><a class="dropdown-item" href="/auth/me">Mi Cuenta</a></li>
@@ -54,7 +52,7 @@
                 <div class="d-flex align-items-center gap-3 ms-1">
 
                     <div class="dropdown">
-                        <img src="defaultImg.png" alt="user" class="rounded-circle profile-img"
+                        <img src="/defaultImg.png" alt="user" class="rounded-circle profile-img"
                              onclick="window.location='/auth/signin'">
                     </div>
                 </div>
@@ -96,8 +94,7 @@
 
                 <nav class="d-flex gap-3 overflow-auto ms-2" style="white-space: nowrap; scrollbar-width: none;">
                     {% for categoria in categorias | slice(0, 5) %}
-                    <a class="nav-link text-white small" href="/productos?categoria={{ categoria.getName }}">{{
-                        categoria.getName }}</a>
+                    <a class="nav-link text-white small" href="/?categoria={{ categoria }}">{{ categoria }}</a>
                     {% endfor %}
                 </nav>
             </div>
@@ -105,7 +102,7 @@
     </header>
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCategories">
         <div class="offcanvas-header bg-custom-dark text-white">
-            <h5 class="offcanvas-title fw-bold">Hola, {{ user.getName }}</h5>
+            <h5 class="offcanvas-title fw-bold">{% if isAuthenticated %}Hola, {{ username }}{% else %}Invitado{% endif %}</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                 aria-label="Close"></button>
         </div>
@@ -113,9 +110,9 @@
             <div class="list-group list-group-flush">
                 <div class="list-group-item fw-bold bg-light mt-2">Buscar por categoría</div>
                 {% for categoria in categorias %}
-                <a href="/productos?categoria={{ categoria.getName }}" class="list-group-item list-group-item-action">{{
-                    categoria.getName }}</a>
+                <a href="/?categoria={{ categoria }}" class="list-group-item list-group-item-action">{{ categoria }}</a>
                 {% endfor %}
             </div>
         </div>
     </div>
+</body>
