corregido la pagina de error y ahora los manager pueden ver sus productos

--- a/src/main/resources/templates/common/navbar.peb.html
+++ b/src/main/resources/templates/common/navbar.peb.html
@@ -82,7 +82,7 @@
         {% if isManager %}
         <div class="bg-custom-secondary text-white py-1 shadow-sm">
             <nav class="d-flex gap-3 overflow-auto ms-6" style="white-space: nowrap; scrollbar-width: none;">
-                <a class="nav-link text-white small" href="/auth/me/productos">Mis productos:</a>
+                <a class="nav-link text-white small" href="/auth/me/products">Mis productos:</a>
                 <a class="nav-link text-white small" href="/auth/me/ventas">Ventas y envios:</a>
             </nav>
         </div>
